--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -35,7 +35,6 @@ Change Log
      - Removed unused Screen::drawChildren(clipRect) method.
      - MultiLineTextBox resizes correctly.
      - AmigaWindow resizes correctly.
-     - Fixed enough problems in the Alert class to make it compile.
      - Minor optimisation in clipping.
 
 
@@ -66,6 +65,7 @@ Change Log
      - Replaced screen buttons with DecorationGlyphButton class.
      - Replaced window buttons with WindowBorderButton class.
      - Skinned decoration buttons inherit from DecorationGlyphButton.
+     - Alert class complete.
 
 
   V0.29 (20081101)
