--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -11,7 +11,7 @@ Change Log
   - New Features:
      - Added ScrollingTextBox class.
      - Added bonus code folder.
-     - Removed LinkedList and LinkedListIterator classes from main codebase into
+     - Moved LinkedList and LinkedListIterator classes from main codebase into
        bonus folder.
 
 
