--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -14,6 +14,8 @@ Change Log
      - Moved LinkedList and LinkedListIterator classes from main codebase into
        bonus folder.
      - Added getPreferredDimensions() to Gadget and Textbox classes.
+     - Moved header includes from woopsi.h to new woopsiheaders.h to allow
+       more streamlined binaries.
 
 
   V0.30 (20080326)
