--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -30,6 +30,7 @@ Change Log
      - MultiLineTextBox restores correct drawing state when resizing.
      - Fixed spelling of "closeable" to "closable".
      - Moved Gadget::_visibleRegionCacheInvalid bool into the flags struct.
+     - Split PacMan demo into separate files for each class.
   
   - New Features:
      - Added ScrollingTextBox class.
