--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -33,6 +33,9 @@ Change Log
      - Split PacMan demo into separate files for each class.
      - Fixed Font and MonoFont scanGlyph() max co-ord overflows.
      - Rewritten Text::wrap() function to be faster and more efficient.
+	 - Tidied up Text class in general.
+	 - Bugfixes to ScrollingTextbox scrollbars.
+	 - Bugfixes to ScrollingTextbox event handling.
   
   - New Features:
      - Added ScrollingTextBox class.
